style: apply openrewrite